# RegulationAdvisor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  RegulationAdvisor_MasterPlan.md  SETUP_DAY1.md  Week5_Plan.md  docker-compose.yml  learning_map.md  masterplan_updates.md  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
data/: README.md
docs/: f10-smolagents-comparison.md  f2-chunking-strategy-comparison.md  f3-full-corpus-ingestion.md  f4-langchain-rag-chain.md  f5-gradio-chat-ui.md  f6-huggingface-spaces.md  f7-agent-state-tools.md  f8-langgraph-agent.md  f9-agent-gradio-wire.md  smolagents_comparison.md  w4-d1-fastapi-foundation.md  w4-d2-streaming-chat.md  w4-d3-chromadb.md  w4-d4-metrics-api.md  w4-d5-eval-dashboard.md  w4-d6-integration.md
evals/: baseline_scores.json  classifier_eval.json  promptfoo.yaml  qa_pairs.json  regression_questions.json
evals/finetune/: examples.json  test.json  train.json  val.json
infra/: README.md  task-definition.json
learning/: day1_eval_dataset.md  day2_ragas_harness.md  day3_guardrail_integration.md  day4_promptfoo_suite.md  day5_week3_integration.md
notebooks/: chunking_comparison.ipynb  week4_notes.md
scripts/: build_finetune_dataset.py  entrypoint.sh  eval_pipeline.py  evaluate_classifier.py  ingest.py  publish_to_hub.py  run_evaluation.py  run_regression_questions.py  train_classifier.py
src/regulation_advisor/: __init__.py  config.py  llm.py  models.py
src/regulation_advisor/agent/: graph.py  smolagents_agent.py  state.py  tools.py
src/regulation_advisor/api/: app.py  metrics_store.py  routes.py  schemas.py
src/regulation_advisor/classifier/: MODEL_CARD.md  reg_classifier.py
src/regulation_advisor/evaluation/: guardrails.py  harness.py
src/regulation_advisor/ingestion/: __init__.py  chunkers.py  loaders.py  pipeline.py
src/regulation_advisor/prompts/: system_prompt.txt
src/regulation_advisor/retrieval/: embeddings.py  retriever.py  store.py
src/regulation_advisor/ui/: app_runner.py  eval_dashboard.py  gradio_app.py
tests/integration/: test_api_integration.py  test_retrieval.py  test_week3_pipeline.py
tests/unit/: test_agent_graph.py  test_api_chat.py  test_api_health.py  test_api_metrics.py  test_chunkers.py  test_config.py  test_eval_dataset.py  test_finetune_dataset.py  test_gradio_byok.py  test_guardrail_integration.py  test_guardrails.py  test_harness.py  test_llm.py  test_loaders.py  test_reg_classifier.py  test_store_factory.py  test_tools.py
