[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regulation-advisor"
version = "0.2.0"
description = "Agentic RAG advisor for EU AI Act compliance — LangGraph agent with 3 tools, human-in-the-loop, and multi-turn memory"
requires-python = ">=3.11"

dependencies = [
    # Document loading
    "llama-index-readers-file",
    "pymupdf",

    # LangChain ecosystem
    "langchain>=1.0.0",
    "langchain-groq",
    "langchain-google-genai",
    "langchain-text-splitters",
    "langgraph>=1.0.0",

    # Embeddings + Vector store
    "sentence-transformers",
    "faiss-cpu",
    "chromadb",

    # Evaluation
    "ragas",

    # API + UI
    "fastapi",
    "uvicorn[standard]",
    "gradio",

    # Config + validation
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",

    # Web search tool
    "tavily-python",

    # Utilities
    "datasets",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "ipykernel",
]

# Install only in Week 6 when you're ready to fine-tune
# Usage: uv sync --group dev --group finetune
finetune = [
    "peft",
    "trl",
    "unsloth",
]

[tool.hatch.build.targets.wheel]
packages = ["src/regulation_advisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
