[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regulation-advisor"
version = "0.6.10"
description = "Agentic RAG advisor for EU AI Act compliance — FastAPI REST API + streaming + ChromaDB + Gradio Evaluation Dashboard + Docker + AWS ECS + QLoRA-fine-tuned RegClassifier"
requires-python = ">=3.11"

dependencies = [
    # Document loading
    "llama-index-readers-file",
    "pymupdf",

    # LangChain ecosystem
    "langchain>=1.0.0",
    "langchain-groq",
    "langchain-google-genai",
    "langchain-text-splitters",
    "langgraph>=1.0.0",

    # Embeddings + Vector store
    "sentence-transformers",
    "faiss-cpu",
    "chromadb",

    # Evaluation
    "ragas",

    # API + UI
    "fastapi",
    "uvicorn[standard]",
    "gradio",

    # Config + validation
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",

    # Web search tool
    "tavily-python",

    # Agent framework comparison (Week 2 F10)
    "smolagents[litellm]",

    # Utilities
    "datasets",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "ipykernel",
]

# Install only when you're ready to fine-tune RegClassifier (GPU required)
# Usage: uv sync --group dev --group finetune
finetune = [
    "peft",
    "trl",
    "unsloth",
]
# `unsloth` pulls in `torchao` transitively. Any torchao version new enough for
# `peft` to treat as "available" (>=0.16) imports torch.int1 (a sub-byte dtype)
# that doesn't exist in the torch 2.5.1 build already pinned by
# sentence-transformers/chromadb — and older, compatible torchao versions make
# `peft` raise a hard ImportError instead of just skipping that backend. There
# is no version that satisfies both. On a machine already pinned to torch
# 2.5.1, the working fix is to remove torchao entirely so peft treats it as
# "not installed" (silently skipped) rather than "installed but too old"
# (hard error):
#     uv sync --group dev --group finetune
#     uv pip uninstall torchao

[tool.hatch.build.targets.wheel]
packages = ["src/regulation_advisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
